# speedsterpy

./: .gitignore  README.md  pyproject.toml
spdstrgui/: README.md  pyproject.toml
spdstrgui/spdstrgui/: viewer.py
spdstrgui/tests/: test_spdstrgui.py
spdstrlib/: pyproject.toml
spdstrlib/spdstrlib/: __init__.py  data.py  read.py  util.py  write.py
spdstrlib/tests/: test_spdstr_lib.py
spdstrnet/: README.md  pyproject.toml
spdstrnet/resources/: crossed_metal.py  geometry_data.py  slotted_metal.py  testing.py
spdstrnet/resources/data/: crossed_metal.gds  slotted_metal.gds
spdstrnet/spdstrnet/: __init__.py  data.py  geometry.py  graph.py  net.py
spdstrnet/tests/: test_spdstrnet.py
spdstrpower/tests/: test_spdstr_power.py
spdstrres/: README.md  pyproject.toml
spdstrres/spdstrres/: __init__.py  data.py  graph.py  layout.py  path.py  read.py  res.py  rpex.py  util.py  viewer.py  write.py
spdstrres/tests/: __init__.py  test_spdstr_res.py
spdstrutil/: README.md  pyproject.toml
spdstrutil/resources/: gds_table.yaml
spdstrutil/spdstrutil/: __init__.py  data.py  read.py  util.py  viewer.py  write.py
spdstrutil/tests/: __init__.py  test_spdstrutil.py
speedsterpy/: __init__.py  main.py  util.py
speedsterpy/spdstrcap/tests/: test_spdstr_cap.py
speedsterpy/spdstrlib/: README.md
speedsterpy/spdstrlib/resources/temp/testbench/: cfg.toml
speedsterpy/spdstrlib/resources/temp2/: test_project_v2.json
speedsterpy/spdstrlib/spdstrlib/: __init__.py  data.py  read.py  write.py
speedsterpy/spdstrlib/tests/: __init__.py  test_spdstr_lib.py
speedsterpy/spdstrres/spdstrres/: spdstrres.py
src/: main.py  util.py
src/spdstrcap/: pyproject.toml
src/spdstrlib/: README.md  pyproject.toml
src/spdstrlib/spdstrlib/: __init__.py  spdstrlib.py
src/spdstrlib/tests/: test_spdstr_lib.py
src/spdstrpower/: pyproject.toml
src/spdstrres/tests/: test_spdstr_res.py
src/speedster_py/: __init__.py  main.py
tests/: test_speedster_py.py
