[tool.poetry]
name = "speedsterpy"
version = "0.1.2"
license = "BSD-3-Clause"
description = "Speedster - A 3D point to point parasitic resistance extraction tool for Integrated Circuits"
authors = ["Diogo Andre <das.dias6@gmail.com>"]
repository = "https://github.com/das-dias/speedsterpy"

[tool.poetry.dependencies]
#python
python = "^3.9"

#external libs
loguru = "^0.6.0" # logging library for python
networkx = "^2.7.1" # graph library for python
toml = "^0.10.2"
#native libs
deflefpy = "^0.1.3"
#local
# spdstrlib   
# spdstrres   
# spdstrutil  

[tool.poetry.dev-dependencies]
pytest = "^5.2" # unit testing framework for python

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
