[tool.poetry]
name = "spdstrlib"
version = "0.1.33"
description = "Speedster project library manager."
authors = ["das-dias <das.dias6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[packages]
include = "**/*.py"
