[tool.poetry]
name = "spdstrnet"
version = "0.1.0"
description = ""
authors = ["dasdias <das.dias6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
loguru = "^0.6.0"
gdstk = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
