[tool.poetry]
name = "spdstrres"
version = "0.1.0"
description = "Speedster point-to-point resistance extraction tool."
authors = ["dasdias <das.dias6@gmail.com>"]

[tool.poetry.dependencies]
# global
python = "^3.9" 
loguru = "^0.6.0" # console logger for textual console reports
numpy = "^1.22.3" # matrix and vector core operations
networkx = "^2.7.1" # graph library for python
gdspy = "^1.6.11" # gdsii ic layout information visualization and parsing" 

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[packages]
include = "**/*.py"